THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
SUPER MINOR REVISION NUMBERS WON'T SHOW UP IN GITHUB BUT IT'LL HELP
ME ORGANIZE WHEN I MADE A SET OF FIXES

UAP-3.3.1
 - PSR-4 ready
 - Self repository, less useless files

UAP-3.3.0
 - Use composer for dependency management
 - Introduce namespaces
 - Removing legacy library dependencies
 - Use PHPUnit for testing
 - Make all tests pass, fix all the remaining bugs
 - Introduce specific result objects
 - Comply with PSR-X coding standards
 - Use Travis for CI
 - Update README
 - Port command line tool to Symfony CLI
 - Secure updating: SSL certificate verification, hashing, try to do atomic updates
 - Restore fetching YAML file only (without generating JSON)

UAP-2.1.1
 - FIX: making sure patch minor is being populated correctly when showing a mismatch

UAP-2.1.0
 - ADD: support for custom regexes.json files (via @pravindahal)
 - FIX: formerly private vars/functions are now protected (via @pravindahal)
 - FIX: command line tool gets 'pretty' option for PHP 5.4 users (via @skyzyx)
 - FIX: refactored the regexes.yaml test suite
 - FIX: now check to see if allow_url_fopen is set to 'On' before trying to download the YAML file from the command line
 - THX: thanks to @pravindahal and @skyzyx for the pull requests
 
UAP-2.0.1
 - FIX: renamed uaParser, osParser, & deviceParser to uaParse, osParse, & deviceParse to address a bug with uaParser being recognized as the contruct function for the overall lib
 - FIX: updated the test lib so that device failures are properly formatted

UAP-2.0.0
 - ADD: toString() converts the version bits and family into a simple string
 - ADD: toVersionString() converts the version bits into a simple string
 - ADD: toFullString() combines the UA and OS family and version bits
 - ADD: "convert" flag for uaparser-cli.php
 - ADD: "pull & save just regexes.yaml" flag for uaparser-cli.php
 - FIX: library is now a dynamic class