@@ -24,6 +24,7 @@ class FetcherTest extends AbstractTestCase
 
     public function testFetchError()
     {
+        $url = "https://raw.githubusercontent.com/ua-parser/uap-core/master/regexes.yaml";
         $fetcher = new Fetcher(
             stream_context_create(
                 array(
@@ -37,7 +38,7 @@ class FetcherTest extends AbstractTestCase
 
         $this->setExpectedException(
             'UAParser\Exception\FetcherException',
-            'Could not fetch HTTP resource "https://raw.githubusercontent.com/ua-parser/uap-core/master/regexes.yaml": file_get_contents(https://raw.githubusercontent.com/ua-parser/uap-core/master/regexes.yaml): failed to open stream: operation failed'
+            'Could not fetch HTTP resource "'.$url.'": file_get_contents('.$url.'): failed to open stream: operation failed'
         );
 
         $fetcher->fetch();
